--- a/megacitycabsystem/src/main/webapp/css/edit-forms.css
+++ b/megacitycabsystem/src/main/webapp/css/edit-forms.css
@@ -86,6 +86,11 @@ body {
   padding: 2rem;
 }
 
+.edit-form .form-content{
+	
+	padding-top: 20px;
+}
+
 .form-group {
   margin-bottom: 1.25rem;
 }
@@ -196,6 +201,25 @@ label {
 
 ::-webkit-scrollbar-thumb:hover {
   background: var(--text-secondary);
+}
+
+.success-message {
+    background-color: #d4edda; /* Light green background */
+    color: #155724;          /* Dark green text */
+    border: 1px solid #c3e6cb;  /* Light green border */
+    padding: 7px 10px;
+    border-radius: 5px;
+    text-align: center;
+    width: fit-content;
+    margin: 15px auto 0 35px;
+}
+
+.success-message i {
+    margin-right: 5px;      /* Space between the icon and text */
+}
+
+.fade-out {
+    opacity: 0;
 }
 
 @media (max-width: 640px) {
