--- a/megacitycabsystem/src/main/webapp/css/dashboard.css
+++ b/megacitycabsystem/src/main/webapp/css/dashboard.css
@@ -233,6 +233,11 @@ body {
     z-index: 99999 !important;
 }
 
+.top-header .header-right {
+	
+	margin-left: auto;
+}
+
 .header-search {
     display: flex;
     align-items: center;
